# speech-keyword-spotting

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
bash/: export.sh  test.sh  train.sh
configs/: classes.txt
notebooks/: test_models.ipynb
scripts/: test.py  train.py  train_urban_sound.py
scripts/deploy/: api.py  request.py
scripts/deploy/fastapi/: Dockerfile  api.py  schemas.py
scripts/deploy/nginx/: Dockerfile  nginx.conf
scripts/export/: export.py  inference.py
scripts/streamlit/: model.py  run_app.py  trace.py
src/: bash.sh  train.py
src/data/: data.py  data_modules.py  data_utils.py  datasets.py
src/keyword_detector/cli_args/: args.py
src/keyword_detector/data/: data_modules.py  data_utils.py  datasets.py
src/keyword_detector/models/: __init__.py  cnn.py  pl_modules.py  transformers.py  vgg.py
src/models/: models.py  pl_modules.py
