[tool.poetry]
name = "speech-keyword-spotting"
version = "0.1.0"
description = ""
authors = ["haceneterbouche <hacene@powder.gg>"]
packages = [
    { include = "keyword_detector", from="src"}, 
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1" # +cu111
torchvision = "^0.9.1" # +cu111
torchaudio = "^0.8.1"
pytorch-lightning = "^1.5.8"
comet-ml = "^3.24.1"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
jsonargparse = {extras = ["signatures"], version = "^4.1.2"}
torchmetrics = "0.10.3"
setuptools = "59.5.0"
transformers = "^4.24.0"
onnxruntime = "^1.13.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
wandb = "^0.13.5"
pre-commit = "^2.16.0"
ipykernel = "^6.6.1"
poethepoet = "^0.10.0"
torchsummary = "^1.5.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
black = "^22.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio==0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Black formatter configuration
line-length = 89
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.sublime-workspace
  | .idea
  | .venv
  | .vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''